2016-08-30  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart.c (read_random_pool): Only initialized srand() once.

2016-07-19  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_get_argv): Always use --batch mode and
	don't pass --yes.

2016-07-14  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_construct_part): When parsing individual
	mime parts, do not treat them as top-level mime parts of a message.

	When decrypting mime parts, for example, we need all headers of the
	decrypted mime part to be included in the GMimeObject returned,
	otherwise we end up losing data.

2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (header_fold_tokens): Fixed folding logic to add a
	space between two consecutive encoded-word tokens when they will fit on
	a single line. Thanks to Jaroslav Gratz for discovering this bug.

	Fixes bug #761263

2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify): Fixed
	a memory leak when verifying S/MIME signatures. Thanks to Minaev Mike for
	discovering this bug.

	Fixes bug #760681

2016-01-13  Jeffrey STedfast  <fejj@gnome.org>

	* gmime/gmime-pkcs7-context.c (key_list_free): Fixed the logic for freeing
	a list of keys. Thanks to foudfou for this patch.

	Fixes bug #760573

2015-10-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/internet-address.c (decode_route): Make sure to free the route
	in error cases to avoid a memory leak.

	Fixes bug #756270

2015-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	* util/url-scanner.c (url_scanner_table_init): Treat all character
	values >= 128 as url-safe. Fixes bug #738583.

2014-07-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-header.c (g_mime_header_list_register_writer):
	g_hash_table_remove() will g_free() the key for us, so don't do it
	ourselves (will result in a double-free).

2014-07-17  Jeffrey Stedfast  <fejj@gnome.org>
