@@ -426,7 +426,7 @@ int main (int argc, char *argv[])
 	if (system ("/bin/mkdir ./tmp") != 0)
 		return EXIT_FAILURE;
 	g_setenv ("GNUPGHOME", "./tmp/.gnupg", 1);
-	if (system ("/usr/bin/gpg --list-keys > /dev/null 2>&1") != 0)
+	if (system ("gpg --list-keys > /dev/null 2>&1") != 0)
 		return EXIT_FAILURE;
 	
 	for (i = 1; i < argc; i++) {
